Fix z-index

--- a/src/components/ConfirmDialog/ConfirmDialog.module.scss
+++ b/src/components/ConfirmDialog/ConfirmDialog.module.scss
@@ -8,7 +8,7 @@
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.7);
-  z-index: 3;
+  z-index: $z-index-modal;
 }
 
 .dialog {
