--- a/src/styles/constants.scss
+++ b/src/styles/constants.scss
@@ -5,3 +5,7 @@ $semibold: 600;
 $extrabold: 800;
 
 $number-of-rows: 5;
+
+$z-index-foreground: 1;
+$z-index-top: 2;
+$z-index-modal: 5;
